--- a/servicios.html
+++ b/servicios.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios - Mudanzas Sostenibles | greenhauL</title>
-    <!-- Fuentes e íconos -->
+    <!-- Íconos y estilos principales -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- Estilos principales -->
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
@@ -58,35 +57,35 @@
             <div class="services-grid">
                 <!-- Servicio 1 -->
                 <div class="service-card">
-                    <div class="service-icon"><i class="fas fa-box-open"></i></div>
+                    <div class="service-icon" aria-label="Embalaje Profesional">🧳</div>
                     <h3>Embalaje Profesional</h3>
                     <p>Empacamos tus pertenencias rápido, eficiente y seguro. Olvídate del estrés y deja todo en manos expertas.</p>
                     <a href="contacto.html" class="btn btn-primary">Solicitar Cotización</a>
                 </div>
                 <!-- Servicio 2 -->
                 <div class="service-card">
-                    <div class="service-icon"><i class="fas fa-couch"></i></div>
+                    <div class="service-icon" aria-label="Montaje de Muebles">🛋️</div>
                     <h3>Montaje de Muebles</h3>
                     <p>Desarmamos y armamos tus muebles en el nuevo domicilio. ¡Tu mudanza lista y sin complicaciones!</p>
                     <a href="contacto.html" class="btn btn-primary">Solicitar Cotización</a>
                 </div>
                 <!-- Servicio 3 -->
                 <div class="service-card">
-                    <div class="service-icon"><i class="fas fa-warehouse"></i></div>
+                    <div class="service-icon" aria-label="Almacenamiento Temporal">🏢</div>
                     <h3>Almacenamiento Temporal</h3>
                     <p>Bodegas seguras y accesibles para guardar tus pertenencias por semanas o meses si lo necesitas.</p>
                     <a href="contacto.html" class="btn btn-primary">Solicitar Cotización</a>
                 </div>
                 <!-- Servicio 4 -->
                 <div class="service-card">
-                    <div class="service-icon"><i class="fas fa-recycle"></i></div>
+                    <div class="service-icon" aria-label="Retiro de Sobrantes">♻️</div>
                     <h3>Retiro de Sobrantes</h3>
                     <p>Recogemos material de embalaje usado y artículos para donar o desechar de forma ecológica.</p>
                     <a href="contacto.html" class="btn btn-primary">Solicitar Cotización</a>
                 </div>
                 <!-- Servicio 5 -->
                 <div class="service-card">
-                    <div class="service-icon"><i class="fas fa-plug"></i></div>
+                    <div class="service-icon" aria-label="Conexión de Aparatos">🔌</div>
                     <h3>Conexión de Aparatos</h3>
                     <p>Conectamos tus electrodomésticos esenciales (refrigerador, lavadora, etc.) en tu nuevo hogar.</p>
                     <a href="contacto.html" class="btn btn-primary">Solicitar Cotización</a>
