--- a/contacto.html
+++ b/contacto.html
@@ -6,15 +6,186 @@
     <title>Contacto - GreenHaul</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/pages.css">
     <style>
-        .contact-page-section { padding: 80px 0; }
-        .contact-main-grid { display: grid; grid-template-columns: 1.2fr 1fr; gap: 50px; }
-        @media (max-width: 900px) { .contact-main-grid { grid-template-columns: 1fr; } }
-        .contact-form-container, .contact-info-card { background: #fff; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.08); padding: 40px; }
-        #contactSuccess, #contactError { display: none; margin-top: 15px; padding: 12px; border-radius: 8px; }
-        #contactSuccess { background: #e0f7ea; color: #1b7c4b; }
-        #contactError { background: #ffcdd2; color: #c62828; }
+        .contact-page-section {
+            padding: 70px 0 40px 0;
+            background: #f8f9fa;
+        }
+        .contact-main-grid {
+            display: grid;
+            grid-template-columns: 1.2fr 1fr;
+            gap: 50px;
+            align-items: flex-start;
+        }
+        @media (max-width: 900px) {
+            .contact-main-grid {
+                grid-template-columns: 1fr;
+                gap: 32px;
+            }
+        }
+        .contact-form-container {
+            background: #fff;
+            border-radius: var(--border-radius, 12px);
+            box-shadow: var(--shadow, 0 4px 15px rgba(0,0,0,0.08));
+            padding: 38px 32px 30px 32px;
+            margin-bottom: 0;
+        }
+        .contact-form-container h3 {
+            font-size: 2rem;
+            font-weight: 700;
+            margin-bottom: 24px;
+            color: var(--primary-solid);
+            text-align: left;
+        }
+        .form-group {
+            margin-bottom: 20px;
+            text-align: left;
+        }
+        .form-group label {
+            display: block;
+            font-weight: 600;
+            margin-bottom: 8px;
+            color: var(--text-light, #666);
+        }
+        .form-control {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid var(--border, #e0e0e0);
+            border-radius: 8px;
+            font-size: 1rem;
+            transition: border-color 0.2s, box-shadow 0.2s;
+            background: #fafbfc;
+        }
+        .form-control:focus {
+            outline: none;
+            border-color: var(--primary-solid, #4a90e2);
+            box-shadow: 0 0 0 3px rgba(74,144,226,0.13);
+        }
+        .contact-form-container button[type="submit"] {
+            width: 100%;
+            margin-top: 10px;
+        }
+        .contact-info-card {
+            background: #fff;
+            border-radius: var(--border-radius, 12px);
+            box-shadow: var(--shadow, 0 4px 15px rgba(0,0,0,0.08));
+            padding: 32px 30px;
+            margin-bottom: 28px;
+        }
+        .contact-info-card h4 {
+            font-size: 1.25rem;
+            margin-bottom: 18px;
+            color: var(--primary-solid);
+        }
+        .contact-info-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            font-size: 1.05rem;
+        }
+        .contact-info-list li {
+            margin-bottom: 13px;
+        }
+        .contact-info-list i {
+            color: var(--accent-green);
+            margin-right: 10px;
+            font-size: 1.18rem;
+        }
+        .map-container-full {
+            border-radius: var(--border-radius, 12px);
+            overflow: hidden;
+            box-shadow: var(--shadow, 0 4px 15px rgba(0,0,0,0.08));
+            margin-top: 10px;
+        }
+        .map-container-full iframe {
+            width: 100%;
+            height: 220px;
+            border: 0;
+            display: block;
+        }
+        .contact-options {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 22px;
+            margin-bottom: 40px;
+        }
+        .contact-option-card {
+            background: white;
+            border: 1px solid var(--border, #e0e0e0);
+            border-radius: var(--border-radius, 12px);
+            padding: 20px 16px 18px 16px;
+            text-align: center;
+            cursor: pointer;
+            transition: transform 0.3s, box-shadow 0.3s, border-color 0.3s;
+            box-shadow: var(--shadow);
+        }
+        .contact-option-card:hover {
+            transform: translateY(-8px) scale(1.04);
+            box-shadow: var(--shadow-hover, 0 8px 25px rgba(0,0,0,0.12));
+            border-color: var(--primary-solid, #4a90e2);
+        }
+        .option-icon {
+            font-size: 2.1rem;
+            color: var(--primary-solid, #4a90e2);
+            margin-bottom: 11px;
+            transition: transform 0.3s, color 0.3s;
+        }
+        .contact-option-card:hover .option-icon {
+            transform: scale(1.15);
+            color: var(--accent-green, #00b386);
+        }
+        .contact-option-card h3 {
+            color: var(--text-dark, #2c3e50);
+            font-size: 1.13rem;
+            margin: 0;
+            border: none;
+            padding: 0;
+            font-weight: 600;
+        }
+        @media (max-width: 600px) {
+            .contact-form-container,
+            .contact-info-card {
+                padding: 20px 8px;
+            }
+        }
+        #contactSuccess, #contactError {
+            display: none;
+            margin-top: 18px;
+            padding: 12px 16px;
+            border-radius: 7px;
+            font-size: 1.09rem;
+        }
+        #contactSuccess {
+            background: #e0f7ea;
+            color: #1b7c4b;
+            border: 1px solid #b2dfdb;
+        }
+        #contactError {
+            background: #fff1f0;
+            color: #c0392b;
+            border: 1px solid #e57373;
+        }
+        /* Toast Popup */
+        #toastPopup {
+            display: none;
+            position: fixed;
+            left: 50%;
+            bottom: 40px;
+            transform: translateX(-50%);
+            background: #00b386;
+            color: #fff;
+            padding: 16px 36px;
+            border-radius: 30px;
+            font-size: 1.1rem;
+            box-shadow: 0 6px 24px rgba(0,0,0,0.13);
+            z-index: 9999;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+        #toastPopup.show {
+            display: block;
+            opacity: 1;
+        }
     </style>
 </head>
 <body>
@@ -52,76 +223,198 @@
                     </div>
                 </div>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+</header>
 
 <main class="page-content">
     <section class="contact-page-section">
         <div class="container">
             <div class="section-title" style="margin-bottom:40px;">
                 <h2>¡Hablemos!</h2>
-                <p>¿Tienes dudas o necesitas una cotización? Completa el formulario y te contactaremos a la brevedad.</p>
+                <p>¿Tienes dudas, necesitas cotización, soporte o quieres colaborar? Completa el formulario o usa los medios de contacto.</p>
+            </div>
+            <div class="contact-options">
+                <div class="contact-option-card">
+                    <div class="option-icon"><i class="fas fa-file-invoice-dollar"></i></div>
+                    <h3>Cotización</h3>
+                </div>
+                <div class="contact-option-card">
+                    <div class="option-icon"><i class="fas fa-question-circle"></i></div>
+                    <h3>Duda General</h3>
+                </div>
+                <div class="contact-option-card">
+                    <div class="option-icon"><i class="fas fa-headset"></i></div>
+                    <h3>Soporte / Pedido</h3>
+                </div>
+                <div class="contact-option-card">
+                    <div class="option-icon"><i class="fas fa-handshake"></i></div>
+                    <h3>Colaboraciones</h3>
+                </div>
             </div>
             <div class="contact-main-grid">
-                <div class="contact-form-container">
-                    <h3>Escríbenos un Mensaje</h3>
-                    <form id="contactForm" autocomplete="off">
-                        <div class="form-group">
-                            <label for="name">Nombre Completo</label>
-                            <input type="text" id="name" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Correo</label>
-                            <input type="email" id="email" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Mensaje</label>
-                            <textarea id="message" class="form-control" rows="5" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
-                        <div id="contactSuccess">¡Mensaje enviado correctamente!</div>
-                        <div id="contactError"></div>
-                    </form>
+                <div>
+                    <div class="contact-form-container">
+                        <h3>Escríbenos un Mensaje</h3>
+                        <form id="contactForm" autocomplete="off">
+                            <div class="form-group">
+                                <label for="name">Nombre Completo</label>
+                                <input type="text" id="name" class="form-control" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Correo</label>
+                                <input type="email" id="email" class="form-control" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Mensaje</label>
+                                <textarea id="message" class="form-control" rows="5" required></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
+                            <div id="contactSuccess">¡Mensaje enviado correctamente! Pronto nos pondremos en contacto.</div>
+                            <div id="contactError"></div>
+                        </form>
+                    </div>
                 </div>
-                <div class="contact-info-card">
-                    <h4>Datos de Contacto</h4>
-                    <ul class="contact-info-list" style="list-style: none; padding: 0;">
-                        <li style="margin-bottom: 15px;"><i class="fas fa-envelope"></i> info@greenhaul.com</li>
-                        <li style="margin-bottom: 15px;"><i class="fas fa-phone-alt"></i> +52 55 1234 5678</li>
-                        <li style="margin-bottom: 15px;"><i class="fas fa-map-marker-alt"></i> Ciudad de México</li>
-                    </ul>
+                <div>
+                    <div class="contact-info-card">
+                        <h4>Datos de Contacto</h4>
+                        <ul class="contact-info-list">
+                            <li><i class="fas fa-envelope"></i> info@greenhauL.com</li>
+                            <li><i class="fas fa-phone-alt"></i> +52 55 1234 5678</li>
+                            <li><i class="fas fa-map-marker-alt"></i> Ciudad de México</li>
+                        </ul>
+                    </div>
+                    <div class="map-container-full">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.52838321424!2d-99.1352453850933!3d19.43260778688414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f93f0b2f1b7b%3A0x9f5f5f5f5f5f5f5f!2sZ%C3%B3calo%2C%20Centro%20Hist%C3%B3rico%2C%20CDMX!5e0!3m2!1ses-419!2smx!4v1628796915850!5m2!1ses-419!2smx" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 </main>
 
+<!-- Toast Popup -->
+<div id="toastPopup">¡Mensaje enviado! Nos contactaremos en breve.</div>
+
 <footer class="footer">
-    </footer>
-
-<div class="cart-modal-overlay" id="cartModalOverlay"></div>
-<div class="cart-notification" id="cartNotification"></div>
-
-<script type="module" src="assets/js/main.js"></script>
+    <div class="container footer-content">
+        <div class="footer-info">
+            <h3>greenhauL</h3>
+            <p>Mudanzas sostenibles, sin complicaciones.</p>
+            <p><i class="fas fa-phone-alt"></i> +52 55 1234 5678</p>
+            <p><i class="fas fa-envelope"></i> info@greenhauL.com</p>
+            <p><i class="fas fa-map-marker-alt"></i> Ciudad de México</p>
+        </div>
+        <div class="footer-links">
+            <h3>Enlaces Rápidos</h3>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </div>
+        <div class="footer-social-links">
+            <h3>Síguenos</h3>
+            <div class="social-icons-wrapper">
+                <a href="#" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-icon" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        &copy; <span id="current-year">2025</span> greenhauL. Todos los derechos reservados.
+    </div>
+</footer>
+<div class="cart-modal-overlay" id="cartModalOverlay">
+    <div class="cart-modal">
+        <div class="cart-modal-header">
+            <h2>Tu Carrito</h2>
+            <button class="close-modal-btn" id="closeCartModalBtn" title="Cerrar">&times;</button>
+        </div>
+        <div class="cart-modal-body" id="cartItemsContainer"></div>
+        <div class="cart-modal-footer">
+            <div class="cart-summary">
+                <p>Subtotal: <span id="cartSubtotal">$0.00</span></p>
+                <p>Impuestos (16%): <span id="cartTaxes">$0.00</span></p>
+                <h3>Total: <span id="cartTotal">$0.00</span></h3>
+            </div>
+            <div class="cart-footer-buttons">
+                <button class="btn btn-secondary empty-cart-btn" id="emptyCartBtn">Vaciar Carrito</button>
+                <a href="confirmacion-entrega-recoleccion.html" class="btn btn-primary proceed-to-checkout-btn" id="proceedToCheckoutBtn">Finalizar Compra</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="cart-notification" id="cartNotification">
+    <div class="notification-content">
+        <div class="notification-icon-wrapper"><span class="notification-icon"></span></div>
+        <p id="notificationText"></p>
+    </div>
+</div>
+<script src="assets/js/main.js"></script>
 <script>
-    // Este script se encarga únicamente del formulario de esta página
-    document.addEventListener('DOMContentLoaded', () => {
-      const form = document.getElementById('contactForm');
-      const successMsg = document.getElementById('contactSuccess');
-      const errorMsg = document.getElementById('contactError');
-      if (!form) return;
+document.addEventListener('DOMContentLoaded', () => {
+  // --- Envío del formulario de contacto ---
+  const form = document.getElementById('contactForm');
+  const successMsg = document.getElementById('contactSuccess');
+  const errorMsg = document.getElementById('contactError');
+  const toast = document.getElementById('toastPopup');
+  if (!form) return;
 
-      form.addEventListener('submit', async (e) => {
-        e.preventDefault();
-        // Lógica de validación y envío (fetch) que ya tienes...
-        // ...
-        
-        // Simulación de éxito para prueba
-        successMsg.style.display = 'block';
-        errorMsg.style.display = 'none';
-        form.reset();
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
+
+    // Obtén los valores de los campos
+    const full_name = document.getElementById('name').value.trim();
+    const email = document.getElementById('email').value.trim();
+    const message = document.getElementById('message').value.trim();
+
+    // Validación básica
+    if (!full_name || !email || !message) {
+      errorMsg.style.display = 'block';
+      errorMsg.textContent = 'Por favor, llena todos los campos.';
+      successMsg.style.display = 'none';
+      return;
+    }
+
+    if (!/\S+@\S+\.\S+/.test(email)) {
+      errorMsg.style.display = 'block';
+      errorMsg.textContent = 'Por favor, ingresa un correo válido.';
+      successMsg.style.display = 'none';
+      return;
+    }
+
+    const backendUrl = 'https://greenhaul-backend-production.up.railway.app';
+
+    try {
+      const response = await fetch(`${backendUrl}/api/contact`, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ full_name, email, message })
       });
-    });
+      const result = await response.json();
+      if (!response.ok) throw new Error(result.message || 'Error al enviar mensaje');
+      successMsg.style.display = 'none';
+      errorMsg.style.display = 'none';
+      form.reset();
+
+      // --- POPUP TOAST DISCRETO ---
+      toast.textContent = '¡Mensaje enviado! Nos contactaremos en breve.';
+      toast.classList.add('show');
+      setTimeout(() => {
+        toast.classList.remove('show');
+      }, 2800);
+
+    } catch (err) {
+      errorMsg.style.display = 'block';
+      errorMsg.textContent = 'Hubo un error al enviar tu mensaje: ' + err.message;
+      successMsg.style.display = 'none';
+    }
+  });
+});
 </script>
 </body>
 </html>
