--- a/nosotros.html
+++ b/nosotros.html
@@ -369,7 +369,7 @@
                         <li><a href="index.html" class="nav-link">Inicio</a></li>
                         <li><a href="productos.html" class="nav-link">Productos</a></li>
                         <li><a href="servicios.html" class="nav-link">Servicios</a></li>
-                        <li><a href="nosotros.html" class="nav-link">Nosotros</a></li>
+                        <li><a href="nosotros.html" class="nav-link active">Nosotros</a></li>
                         <li><a href="contacto.html" class="nav-link">Contacto</a></li>
                         <li><a href="faq.html" class="nav-link">Preguntas</a></li>
                     </ul>
@@ -390,6 +390,7 @@
             </div>
         </nav>
     </header>
+    
 
     <main class="page-content">
         <!-- Hero Section Tecnológico -->
